--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,9 @@ section{
 .heading span::before{
     content: '';
     position: absolute;
-    bottom: 1rem; left: 0;
+    bottom: -.5rem; left: 0;
     z-index: -1;
-    background: var(--orange);
+    background: linear-gradient(45deg,var(--orange) 20%,rgba(185, 219, 185, 0.589));
     height: 100%;
     width: 100%;
     clip-path: polygon(0 90%, 100% 83%, 100% 100%, 0% 100%);
@@ -103,6 +103,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 .header .logo{
@@ -256,6 +257,7 @@ section{
     flex-wrap: wrap;
     gap:1.5rem;
     padding-top: 7rem;
+    margin-top: 10rem;
 }
 
 .home .image{
@@ -264,6 +266,8 @@ section{
 
 .home .image img{
     width: 100%;
+    height: 60rem;
+
 }
 
 .home .content{
