--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,11 @@ section{
     .header .search-form.active{
         transform:scale(1);
     }
-
+    .home .image img{
+        width: 100%;
+        height: 60rem;
+    
+    }
 
 }
 
@@ -818,6 +822,12 @@ section{
 
     .contact form .inputBox input{
         width: 100%;
+    }
+
+    .home .image img{
+        width: 100%;
+        height: 50rem;
+    
     }
 
 }
