--- a/css/style.css
+++ b/css/style.css
@@ -25,42 +25,71 @@ html{
     scroll-padding-top: 7rem;
     scroll-behavior: smooth;
 }
-
-
 .navholder{
-    position: fixed;
-    top:0; left:0; right:0;
-    background:white;
-    box-shadow: 0px 3px 6px rgba(5, 5, 5, 0.562);
-    /* padding: 1.5rem 7%; */
-    z-index: 1000;
     width: 100%;
-    height: fit-content;
+    height: 14rem;
+    background: red;
+    display: flex;
+    flex-direction: column;
 }
-
-.header{
+.nav{
     width: 100%;
-    padding: 1.5rem 7%;
-    z-index: 1000;
+    height: 10rem; 
+    background:white;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    
+    justify-content: space-around;
+    padding: 1rem;
 }
 
 .subnav{
     width: 100%;
+    height: 4rem; 
+    background: green; 
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background: green;
-    padding: .8rem;
+    justify-content: space-around;
+    
 }
 
 .subnav p{
+    font-size: 1.5rem;
     color: white;
+}
+
+.jump{
+    width: 25rem;
+    display: flex;
+    gap: 2rem;
     font-size: 1.5rem;
 }
+
+.jump p:hover{
+    color: green;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.jump p:last-child{
+    color: orange;
+    border-left: 1px solid #000;
+    padding-left: 2rem;
+}
+
+/* .subnav{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 80rem;
+    align-items: center;
+    background: green;
+    padding: .8rem;
+} */
+
+/* .subnav p{
+    color: white;
+    font-size: 1.5rem;
+} */
 .subnav button{
     background: rgb(2, 37, 2);
     border-radius: 2rem;
@@ -139,7 +168,7 @@ section{
 .hero{
     width: 98%;
     height: fit-content;
-    margin: 25rem auto;
+    margin: 18rem auto;
     border-radius: .5em;
     display: flex;
     align-items: center;
