--- a/css/style2.css
+++ b/css/style2.css
@@ -224,3 +224,395 @@ input[type="submit"]:hover{
     background: orange;
     transition: .5s ease-in-out;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* media queries  */
+
+@media (max-width:991px){
+
+    html{
+        font-size: 55%;
+    }
+
+    .header{
+        padding:1.5rem 2rem;
+    }
+
+    section{
+        padding:2rem;
+    }
+
+    input[type="email"]{
+        width: 75%;
+        height: 3.6rem;
+        border-top-left-radius:2rem ;
+        border-bottom-left-radius: 2rem;
+        background: rgba(203, 218, 203, 0.781);
+        padding-left: 1.5em;
+    }
+    
+    button{
+        width: 25%;
+        height: 3.6rem; 
+        font-size: 1.2rem;
+        background: green;
+        color: white;
+        border-top-right-radius: 2rem;
+        border-bottom-right-radius: 2rem;
+    }
+
+    .container{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5.8rem;
+        padding: 1.5rem;
+        flex-direction: column;
+        
+    }
+
+    /* .spew{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+        flex-direction: column;
+    } */
+/* 
+    .sizes{
+        width: 100%;
+        height: 25rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+    
+
+    .s1{
+        width: 100%;
+        height: 20rem;
+        background:white;
+        display: flex;
+        gap: 2rem;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 .2rem .7rem rgb(90, 90, 90);
+        } */
+
+
+        .up2 input{
+            width: 25rem;
+        }
+        .spew{
+            width: 100%;
+            height: fit-content;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 3rem;
+            flex-direction: column;
+        }
+    
+        .sizes{
+            width: 100%;
+            height: 25rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            flex-direction: column;
+            margin-top: 15rem;
+        }
+        .box{
+            width: 100%;
+            height: fit-content;
+        
+        }
+        .s1{
+            width: 100%;
+            height: 20rem;
+            background:white;
+            display: flex;
+            gap: 2rem;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 .2rem .7rem rgb(90, 90, 90);
+            }
+    
+            .inputhollder{
+                width: 100%;
+                height: 30rem;
+                margin-top: 18rem;
+            }
+    
+    
+}
+
+@media (max-width:768px){
+
+    .header .navbar{
+        right: 2rem;
+    }
+
+    .header .login-form{
+        right: 2rem;
+    }
+
+    #search-btn{
+        display:none;
+    }
+
+    .header .search-form{
+        position: absolute;
+        top:115%; right: 2rem;
+        background:var(--bg-color-1);
+        border-radius: .5rem;
+        width: 90%;
+        box-shadow: var(--box-shadow);
+        transform:scale(0);
+        transform-origin: top right;
+    }
+
+    .header .search-form.active{
+        transform:scale(1);
+    }
+    .home .image img{
+        width: 100%;
+        height: 60rem;
+    
+    }
+
+    input[type="email"]{
+        width: 75%;
+        height: 3.6rem;
+        border-top-left-radius:2rem ;
+        border-bottom-left-radius: 2rem;
+        background: rgba(203, 218, 203, 0.781);
+        padding-left: 1.5em;
+    }
+    
+    button{
+        width: 25%;
+        height: 3.6rem; 
+        font-size: 1.2rem;
+        background: green;
+        color: white;
+        border-top-right-radius: 2rem;
+        border-bottom-right-radius: 2rem;
+    }
+    
+    .container{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5.8rem;
+        padding: 1.5rem;
+        flex-direction: column;
+        
+    }
+
+
+        .up2 input{
+            width: 25rem;
+        }
+        .spew{
+            width: 100%;
+            height: fit-content;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 3rem;
+            flex-direction: column;
+        }
+    
+        .sizes{
+            width: 100%;
+            height: 25rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            flex-direction: column;
+            margin-top: 15rem;
+        }
+        .box{
+            width: 100%;
+            height: fit-content;
+        
+        }
+        .s1{
+            width: 100%;
+            height: 20rem;
+            background:white;
+            display: flex;
+            gap: 2rem;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 .2rem .7rem rgb(90, 90, 90);
+            }
+    
+            .inputhollder{
+                width: 100%;
+                height: 30rem;
+                margin-top: 18rem;
+            }
+}
+
+@media (max-width:450px){
+
+    html{
+        font-size: 50%;
+    }
+
+    .contact form .inputBox input{
+        width: 100%;
+    }
+
+    .home .image img{
+        width: 100%;
+        height: 50rem;
+    
+    }
+
+
+    input[type="email"]{
+        width: 75%;
+        height: 3.6rem;
+        border-top-left-radius:2rem ;
+        border-bottom-left-radius: 2rem;
+        background: rgba(203, 218, 203, 0.781);
+        padding-left: 1.5em;
+    }
+    
+    button{
+        width: 25%;
+        height: 3.6rem; 
+        font-size: 1.2rem;
+        background: green;
+        color: white;
+        border-top-right-radius: 2rem;
+        border-bottom-right-radius: 2rem;
+    }
+    
+    .container{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5.8rem;
+        padding: 1.5rem;
+        flex-direction: column;
+        
+    }
+
+    .icon{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: white;
+        border-radius: 1rem;
+        padding: 2rem;
+        /* box-shadow: 0px 1px 2px black; */
+    }
+    
+    .ico{
+        width: 40%;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+        
+    }
+    
+    .icocontent{
+        width: 100%;
+        height: fit-content;
+        text-align: center;
+    }
+    
+    .icocontent h3{
+        font-size: 1.6rem;
+    }
+    
+    .icocontent p{
+        font-size: 1.4rem;
+    }
+    
+    .loc1{
+        border: .1rem solid rgba(117, 116, 116, 0.623);
+        width: 40%;
+        height: 20rem;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        padding: 1.2rem;
+    }
+
+    .loc1 img{
+        width: 70px;
+        height: 30px;
+    }
+
+    .up2 input{
+        width: 25rem;
+    }
+    .spew{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+        flex-direction: column;
+    }
+
+    .sizes{
+        width: 100%;
+        height: 25rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        margin-top: 15rem;
+    }
+    .box{
+        width: 100%;
+        height: fit-content;
+    
+    }
+    .s1{
+        width: 100%;
+        height: 20rem;
+        background:white;
+        display: flex;
+        gap: 2rem;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 .2rem .7rem rgb(90, 90, 90);
+        }
+
+        .inputhollder{
+            width: 100%;
+            height: 30rem;
+            margin-top: 18rem;
+        }
+}
