--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ button{
 button.partnerone{
     width: 40%;
     height: 3.6rem;
-    background: red;
+    background: green;
 }
 
 button.partnerotwo{
